correct bad visibility by making it using just debounce

--- a/hozen_style.css
+++ b/hozen_style.css
@@ -166,7 +166,6 @@ pre {
     overflow-y: scroll;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
-    visibility: visible;
 }
 
 #text-table-of-contents::-webkit-scrollbar { 
